2016-08-18  Araki Ken  <arakiken@users.sf.net>

	* README.cosole, PROTOCOL: Updated.

	* main-con.c: termios is reset on exit.

	* version.h.in: 3.7.2 -> 3.7.2post

2016-08-15  Araki Ken  <arakiken@users.sf.net>

	* 3.7.2 released.
	  (tag "rel-3_7_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.7.2.

	* doc/en/README.console: Added.

2016-08-14  Araki Ken  <arakiken@users.sf.net>

	* main_loop.c, x_main_config.c: "mod_meta_prefix" / --metaprefix option
	  is processed in x_main_config.c instead of main_loop.c.

	* x_screen.[ch]: x_free_mod_meta_prefix() is added.

	* vte.c: "word_separators" / --sep and "auto_restart" / --restart options
	  which are processed in x_main_config.c are removed.

	* hb.c: <ftmodapi.h> in win32gdi is changed to <freetype/ftmodapi.h>

	* android/jni/x.h: platform dependent options are added.

2016-08-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, man/mlterm.1: Updated.

	* x_main_config.c: "primary_da" / --da1 and "secondary_da" / --da2 options
	  are added.

	* ml_vt100_parser.[ch]:
	  - ml_set_{primary|secondary}_da() are added.
	  - DA1 response is changed from CSI?1;2;3;4;7;29c to CSI?63;1;2;3;4;6;29c.
	  - DA2 response is changed from CSI>1;279;0c to CSI>24;279;0c
	  - DECRQSS is partially supported.

	* ml_edit.c: ml_edit_scroll_{up|down}ward() works if cursor position is not
	  within vertical and horizontal margins.

	* mlterm/Makefile.in: Whether $libdir/libmlterm_core.so is built with open type
	  layout option is checked before installing new libmlterm_core.so libraray.

	* main-con.c, console/x_display.c: #ifdef ECHOPRT is added.

	* x_window.c: Cursor is moved within vertical and horizontal margins before
	  SD or SU.

	* configure.in: --with-gui=console works on cygwin.

2016-08-07  Araki Ken  <arakiken@users.sf.net>

	* x_window.h: clip_y and clip_height members of x_window_t are enabled on mlterm-con