@@ -1,3 +1,8 @@
+2016-08-21  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_pty_ssh.c: Compression of ssh connection is always enabled if libssh2-1.5.0
+	  or later is used.
+
 2016-08-18  Araki Ken  <arakiken@users.sf.net>
 
 	* README.cosole, PROTOCOL: Updated.
